--- a/app/src/main/res/layout/content_log_in.xml
+++ b/app/src/main/res/layout/content_log_in.xml
@@ -4,16 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorBlue"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="edu.uw.tacoma.team5.calorit.LogInActivity"
     tools:showIn="@layout/activity_log_in">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:id="@+id/username"
+        android:fontFamily="serif"
+        android:hint="@string/username_hint"
+        android:inputType="textEmailAddress"
+        android:textColorHint="@color/colorWhite"
+        android:maxLines="1"
+        android:layout_centerInParent="true"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/username"
+        android:layout_marginBottom="100dp"
+        android:src="@drawable/logo"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/password"
+        android:inputType="textPassword"
+        android:fontFamily="serif"
+        android:hint="@string/password_hint"
+        android:textColorHint="@color/colorWhite"
+        android:maxLines="1"
+        android:layout_below="@id/username"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal"
+        android:layout_below="@id/password">
+
+        <Button
+            android:id="@+id/sign_in_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/sign_in_btn" />
+        <Button
+            android:id="@+id/sign_up_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/sign_up_btn"/>
+
+    </LinearLayout>
 </RelativeLayout>
