--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,22 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlue"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.uw.tacoma.team5.calorit.LogInActivity"
-    tools:showIn="@layout/activity_log_in">
-
-
+    tools:context="edu.uw.tacoma.team5.calorit.SignInFragment">
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/username"
+        android:id="@+id/sign_in_username"
         android:fontFamily="serif"
         android:hint="@string/username_hint"
         android:inputType="textEmailAddress"
@@ -27,7 +20,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/username"
+        android:layout_above="@id/sign_in_username"
         android:layout_marginBottom="100dp"
         android:src="@drawable/logo"/>
 
@@ -37,13 +30,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:id="@+id/password"
+        android:id="@+id/sign_in_password"
         android:inputType="textPassword"
         android:fontFamily="serif"
         android:hint="@string/password_hint"
         android:textColorHint="@color/colorWhite"
         android:maxLines="1"
-        android:layout_below="@id/username"/>
+        android:layout_below="@id/sign_in_username"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,7 +45,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="horizontal"
-        android:layout_below="@id/password">
+        android:layout_below="@id/sign_in_password">
 
         <Button
             android:id="@+id/sign_in_btn"
