--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,14 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorBlue"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.uw.tacoma.team5.calorit.SignUpActivity"
-    tools:showIn="@layout/activity_sign_up">
+    tools:context="edu.uw.tacoma.team5.calorit.SignUpFragment">
 
     <EditText
         android:layout_width="match_parent"
@@ -57,4 +52,5 @@
         android:layout_marginTop="20dp"
         android:id="@+id/create_account_btn"
         android:text="@string/create_account_btn"/>
+
 </LinearLayout>
