--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -18,13 +18,6 @@
         android:inputType="textEmailAddress"
         android:maxLines="1"/>
 
-    <!--<ImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_above="@id/sign_in_username"-->
-        <!--android:layout_marginBottom="100dp"-->
-        <!--android:src="@drawable/logo"/>-->
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,16 +36,18 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/sign_in_btn"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/sign_in_btn" />
         <Button
             android:id="@+id/sign_up_btn"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="@string/sign_up_btn"/>
 
