--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:id="@+id/sign_up_username"
-        android:hint="@string/username_hint"
+        android:hint="@string/sign_up_username_hint"
         android:fontFamily="serif"
         android:inputType="textEmailAddress"
         android:maxLines="1"/>
@@ -25,7 +25,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:id="@+id/sign_up_password"
-        android:hint="@string/password_hint"
+        android:hint="@string/sign_up_password_hint"
         android:fontFamily="serif"
         android:inputType="textPassword"
         android:maxLines="1"/>
@@ -42,13 +42,20 @@
         android:inputType="textPassword"
         android:maxLines="1"/>
 
-    <Button
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:id="@+id/create_account_btn"
-        android:text="@string/create_account_btn"/>
+        android:layout_marginRight="20dp">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/create_account_btn"
+            android:text="@string/create_account_btn"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
